codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__vite_plus_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭──────────────────────────────────────────────────────╮
│ ✨ Update available! 0.159.3 -> 9.9.9                │
│ Run vp install -g @mmmbuto/codex-vl to update.       │
│                                                      │
│ See full release notes:                              │
│ https://github.com/DioNanos/codex-vl/releases/latest │
╰──────────────────────────────────────────────────────╯
